* Added proper heading captions for Phil's new library columns. * Use a QTreeView instead of a QListView for WTrackSourcesView. * Added stub code for hierchical track sources. * Added one tiny FIXME to RhythmboxTrackModel

--- a/mixxx/res/mixxx.qrc
+++ b/mixxx/res/mixxx.qrc
@@ -18,6 +18,7 @@
     <file>images/preferences/vinyl.png</file>
     <file>images/preferences/broadcast.svg</file>
     <file>images/preferences/broadcast.png</file>
+    <file>images/library/rhythmbox.png</file>
     <file>images/mixxx_logo.png</file>
     <file>images/mixxx-icon.png</file>
     <file>images/iconsmall.png</file>
