--- a/mixxx/src/dlgprefmidibindingsdlg.ui
+++ b/mixxx/src/dlgprefmidibindingsdlg.ui
@@ -97,9 +97,9 @@
     </widget>
    </item>
    <item row="1" column="0">
-    <widget class="QPushButton" name="btnActivateDevice">
+    <widget class="QCheckBox" name="chkEnabledDevice">
      <property name="text">
-      <string>Activate</string>
+      <string>Enabled</string>
      </property>
     </widget>
    </item>
