--- a/mixxx/res/mixxx.qrc
+++ b/mixxx/res/mixxx.qrc
@@ -19,6 +19,7 @@
     <file>images/preferences/broadcast.svg</file>
     <file>images/preferences/broadcast.png</file>
     <file>images/library/rhythmbox.png</file>
+    <file>images/library/crate_empty.png</file>
     <file>images/mixxx_logo.png</file>
     <file>images/mixxx-icon.png</file>
     <file>images/iconsmall.png</file>
