--- a/mixxx/src/dlgprefplaylistdlg.ui
+++ b/mixxx/src/dlgprefplaylistdlg.ui
@@ -1,169 +1,182 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>DlgPrefPlaylistDlg</class>
- <widget class="QWidget" name="DlgPrefPlaylistDlg" >
-  <property name="geometry" >
+ <widget class="QWidget" name="DlgPrefPlaylistDlg">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>462</width>
-    <height>87</height>
+    <width>452</width>
+    <height>207</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Form3</string>
   </property>
-  <layout class="QVBoxLayout" >
-     <property name="alignment" >
-       <enum>Qt::AlignTop</enum>
-     </property>
-  <item>
-    <widget class="QGroupBox" name="groupBoxLibrary" >
-     <property name="title" >
+  <layout class="QVBoxLayout">
+   <item>
+    <widget class="QGroupBox" name="groupBoxLibrary">
+     <property name="title">
       <string>Library</string>
      </property>
-     <layout class="QGridLayout" >
-     <property name="alignment" >
-       <enum>Qt::AlignTop</enum>
-     </property>
-    <item row="0" column="0" >
-
-    <widget class="QLabel" name="TextLabel3_2" >
-     <property name="enabled" >
-      <bool>true</bool>
-     </property>
-     <property name="font" >
-      <font/>
-     </property>
-            <property name="minimumSize" >
-             <size>
-              <width>100</width>
-              <height>10</height>
-             </size>
-            </property>
-     <property name="text" >
-      <string>Songs directory</string>
-     </property>
-     <property name="wordWrap" >
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="TextLabel3_2">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>100</width>
+          <height>10</height>
+         </size>
+        </property>
+        <property name="font">
+         <font/>
+        </property>
+        <property name="text">
+         <string>Music Directory:</string>
+        </property>
+        <property name="wordWrap">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="LineEditSongfiles">
+        <property name="minimumSize">
+         <size>
+          <width>100</width>
+          <height>10</height>
+         </size>
+        </property>
+        <property name="font">
+         <font/>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QPushButton" name="PushButtonBrowsePlaylist">
+        <property name="font">
+         <font/>
+        </property>
+        <property name="text">
+         <string>Browse...</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0" colspan="3">
+       <widget class="QGroupBox" name="groupBox">
+        <property name="title">
+         <string>Audio Playback Plugins</string>
+        </property>
+        <property name="flat">
+         <bool>false</bool>
+        </property>
+        <layout class="QGridLayout" name="gridLayout_2">
+         <item row="0" column="0">
+          <widget class="QLabel" name="label">
+           <property name="text">
+            <string>M4A Playback:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QPushButton" name="pushButtonM4A">
+           <property name="text">
+            <string>Download</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <spacer name="verticalSpacer">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="groupBoxiPod">
+     <property name="visible">
       <bool>false</bool>
      </property>
-    </widget>
-
-   </item>
-   <item row="0" column="1" >
-
-    <widget class="QLineEdit" name="LineEditSongfiles" >
-     <property name="font" >
-      <font/>
-     </property>
-            <property name="minimumSize" >
-             <size>
-              <width>100</width>
-              <height>10</height>
-             </size>
-            </property>
-    </widget>
-
-   </item>
-   <item row="0" column="2">
-
-    <widget class="QPushButton" name="PushButtonBrowsePlaylist" >
-     <property name="font" >
-      <font/>
-     </property>
-     <property name="text" >
-      <string>Browse...</string>
-     </property>
-    </widget>
-
-   </item>
-  </layout>
- </widget>
-
-   </item>
-<item>
-  <widget class="QGroupBox" name="groupBoxiPod" >
-     <property name="visible" >
-      <bool>false</bool>
-     </property>
-
-     <property name="title" >
+     <property name="title">
       <string>iPod</string>
      </property>
-     <layout class="QGridLayout" >
-     <property name="alignment" >
-       <enum>Qt::AlignTop</enum>
-     </property>
-
-      <item row="0" column="0" >
-
-    <widget class="QLabel" name="TextLabel3_3" >
-     <property name="enabled" >
-      <bool>true</bool>
-     </property>
-     <property name="font" >
-      <font/>
-     </property>
-            <property name="minimumSize" >
-             <size>
-              <width>100</width>
-              <height>10</height>
-             </size>
-            </property>
-     <property name="text" >
-      <string>iPod mountpoint</string>
-     </property>
-     <property name="wordWrap" >
-      <bool>false</bool>
-     </property>
+     <layout class="QGridLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="TextLabel3_3">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>100</width>
+          <height>10</height>
+         </size>
+        </property>
+        <property name="font">
+         <font/>
+        </property>
+        <property name="text">
+         <string>iPod mountpoint</string>
+        </property>
+        <property name="wordWrap">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="LineEditiPodMountPoint">
+        <property name="minimumSize">
+         <size>
+          <width>100</width>
+          <height>10</height>
+         </size>
+        </property>
+        <property name="font">
+         <font/>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QPushButton" name="PushButtonBrowseiPodMountPoint">
+        <property name="font">
+         <font/>
+        </property>
+        <property name="text">
+         <string>Browse...</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="3">
+       <widget class="QPushButton" name="PushButtonDetectiPodMountPoint">
+        <property name="font">
+         <font/>
+        </property>
+        <property name="text">
+         <string>Detect</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
-
    </item>
-   <item row="0" column="1" >
-
-    <widget class="QLineEdit" name="LineEditiPodMountPoint" >
-     <property name="font" >
-      <font/>
-     </property>
-            <property name="minimumSize" >
-             <size>
-              <width>100</width>
-              <height>10</height>
-             </size>
-            </property>
-    </widget>
-
-   </item>
-   <item row="0" column="2">
-
-    <widget class="QPushButton" name="PushButtonBrowseiPodMountPoint" >
-     <property name="font" >
-      <font/>
-     </property>
-     <property name="text" >
-      <string>Browse...</string>
-     </property>
-    </widget>
-
-   </item>
-   <item row="0" column="3">
-    <widget class="QPushButton" name="PushButtonDetectiPodMountPoint" >
-     <property name="font" >
-      <font/>
-     </property>
-     <property name="text" >
-      <string>Detect</string>
-     </property>
-    </widget>
-  </item>
-
   </layout>
  </widget>
-
-</item>
-</layout>
-</widget>
-
- <layoutdefault spacing="6" margin="11" />
+ <layoutdefault spacing="6" margin="11"/>
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
  <resources/>
  <connections/>
