--- a/mixxx/src/dlgprefplaylistdlg.ui
+++ b/mixxx/src/dlgprefplaylistdlg.ui
@@ -77,21 +77,14 @@
       <bool>false</bool>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
-      <item row="0" column="0">
+      <item row="1" column="0">
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>M4A Playback:</string>
+         <string>Extra Playback Plugins:</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QPushButton" name="pushButtonM4A">
-        <property name="text">
-         <string>Download</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
+      <item row="3" column="0">
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -104,7 +97,7 @@
         </property>
        </spacer>
       </item>
-      <item row="1" column="0">
+      <item row="0" column="0">
        <widget class="QLabel" name="label_2">
         <property name="text">
          <string>MP3, Ogg Vorbis, FLAC, Wave, Aiff Playback:</string>
@@ -114,13 +107,20 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="0" column="1">
        <widget class="QPushButton" name="pushButton">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="text">
          <string>Built-in</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QPushButton" name="pushButtonExtraPlugins">
+        <property name="text">
+         <string>Available Online...</string>
         </property>
        </widget>
       </item>
