--- a/mixxx/src/dlgprepare.ui
+++ b/mixxx/src/dlgprepare.ui
@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>DlgPrepare</class>
- <widget class="QWidget" name="DlgPrepare" >
-  <property name="geometry" >
+ <widget class="QWidget" name="DlgPrepare">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,32 +10,57 @@
     <height>399</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Manage</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout" >
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout" >
+    <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QRadioButton" name="radioButtonRecentlyAdded" >
-       <property name="text" >
+      <spacer name="horizontalSpacer_3">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Fixed</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>12</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QRadioButton" name="radioButtonRecentlyAdded">
+       <property name="text">
         <string>Recently Added</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QRadioButton" name="radioButtonAllSongs" >
-       <property name="text" >
+      <widget class="QRadioButton" name="radioButtonAllSongs">
+       <property name="text">
         <string>All Songs</string>
        </property>
       </widget>
      </item>
      <item>
-      <spacer name="horizontalSpacer" >
-       <property name="orientation" >
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" stdset="0" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
@@ -43,31 +69,47 @@
       </spacer>
      </item>
      <item>
-      <widget class="QLabel" name="labelProgress" >
-       <property name="text" >
+      <widget class="QLabel" name="labelProgress">
+       <property name="text">
         <string>Progress</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButtonSelectAll" >
-       <property name="text" >
+      <widget class="QPushButton" name="pushButtonSelectAll">
+       <property name="text">
         <string>Select All</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButtonAnalyze" >
-       <property name="text" >
+      <widget class="QPushButton" name="pushButtonAnalyze">
+       <property name="text">
         <string>Analyze</string>
        </property>
       </widget>
      </item>
+     <item>
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Fixed</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>12</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
     </layout>
    </item>
    <item>
-    <widget class="QTableView" name="m_pTrackTablePlaceholder" >
-     <property name="showGrid" >
+    <widget class="QTableView" name="m_pTrackTablePlaceholder">
+     <property name="showGrid">
       <bool>true</bool>
      </property>
     </widget>
