--- a/mixxx/src/dlgprefbpmdlg.ui
+++ b/mixxx/src/dlgprefbpmdlg.ui
@@ -5,46 +5,28 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>427</width>
-    <height>395</height>
+    <width>433</width>
+    <height>446</height>
    </rect>
   </property>
   <property name="windowTitle" >
    <string>BPM Detection Settings</string>
   </property>
-  <layout class="QGridLayout" >
-   <item row="0" column="0" >
-    <widget class="Q3GroupBox" name="GroupBox1" >
-     <property name="enabled" >
-      <bool>true</bool>
-     </property>
-     <property name="sizePolicy" >
-      <sizepolicy vsizetype="Preferred" hsizetype="Preferred" >
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="minimumSize" >
-      <size>
-       <width>409</width>
-       <height>150</height>
-      </size>
-     </property>
-     <property name="font" >
-      <font/>
-     </property>
+  <layout class="QVBoxLayout" name="verticalLayout" >
+   <item>
+    <widget class="QGroupBox" name="groupBox" >
      <property name="title" >
       <string>BPM Detection</string>
      </property>
-     <layout class="QGridLayout" >
-      <item row="0" column="0" >
+     <layout class="QVBoxLayout" name="verticalLayout_2" >
+      <item>
        <widget class="QCheckBox" name="chkEnableBpmDetection" >
         <property name="text" >
          <string>Enable BPM Detection</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0" >
+      <item>
        <widget class="Line" name="line1" >
         <property name="frameShape" >
          <enum>QFrame::HLine</enum>
@@ -54,21 +36,21 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0" >
+      <item>
        <widget class="QCheckBox" name="chkDetectOnImport" >
         <property name="text" >
          <string>Detect Song BPM on Import</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="0" >
+      <item>
        <widget class="QCheckBox" name="chkWriteID3" >
         <property name="text" >
          <string>Write BPM to ID3 Tag</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="0" >
+      <item>
        <widget class="QCheckBox" name="chkAboveRange" >
         <property name="toolTip" >
          <string>If BPM can be detected but not within specified range</string>
@@ -81,7 +63,7 @@
      </layout>
     </widget>
    </item>
-   <item row="1" column="0" >
+   <item>
     <widget class="QGroupBox" name="grpBpmSchemes" >
      <property name="minimumSize" >
       <size>
@@ -139,7 +121,7 @@
         <property name="orientation" >
          <enum>Qt::Vertical</enum>
         </property>
-        <property name="sizeHint" >
+        <property name="sizeHint" stdset="0" >
          <size>
           <width>20</width>
           <height>40</height>
@@ -148,20 +130,19 @@
        </spacer>
       </item>
      </layout>
+     <zorder>lstSchemes</zorder>
+     <zorder>btnAdd</zorder>
+     <zorder>btnEdit</zorder>
+     <zorder>btnDelete</zorder>
+     <zorder>btnDefault</zorder>
+     <zorder>GroupBox1</zorder>
+     <zorder>groupBox</zorder>
     </widget>
    </item>
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11" />
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
- <customwidgets>
-  <customwidget>
-   <class>Q3GroupBox</class>
-   <extends>QGroupBox</extends>
-   <header>Qt3Support/Q3GroupBox</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
