--- a/mixxx/src/dlgprefrecorddlg.ui
+++ b/mixxx/src/dlgprefrecorddlg.ui
@@ -6,14 +6,14 @@
     <x>0</x>
     <y>0</y>
     <width>412</width>
-    <height>409</height>
+    <height>411</height>
    </rect>
   </property>
   <property name="windowTitle" >
    <string>Form3</string>
   </property>
-  <layout class="QGridLayout" >
-   <item row="0" column="0" >
+  <layout class="QVBoxLayout" name="verticalLayout" >
+   <item>
     <layout class="QGridLayout" >
      <item row="0" column="0" >
       <widget class="QLabel" name="TextLabel3_2" >
@@ -72,7 +72,7 @@
        <property name="orientation" >
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0" >
         <size>
          <width>40</width>
          <height>20</height>
@@ -85,7 +85,7 @@
        <property name="orientation" >
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0" >
         <size>
          <width>40</width>
          <height>20</height>
@@ -95,22 +95,13 @@
      </item>
     </layout>
    </item>
-   <item row="1" column="0" >
-    <widget class="Q3GroupBox" name="groupBoxQuality" >
-     <property name="enabled" >
-      <bool>true</bool>
-     </property>
-     <property name="font" >
-      <font/>
-     </property>
+   <item>
+    <widget class="QGroupBox" name="groupBoxQuality" >
      <property name="title" >
       <string>Quality</string>
      </property>
-     <property name="orientation" >
-      <enum>Qt::Vertical</enum>
-     </property>
-     <layout class="QGridLayout" >
-      <item row="0" column="1" >
+     <layout class="QGridLayout" name="gridLayout" >
+      <item row="0" column="2" >
        <widget class="QLabel" name="TextQuality" >
         <property name="text" >
          <string>Quality</string>
@@ -123,7 +114,7 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="0" colspan="2" >
+      <item rowspan="2" row="1" column="0" colspan="3" >
        <widget class="QSlider" name="SliderQuality" >
         <property name="minimum" >
          <number>1</number>
@@ -148,20 +139,7 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0" >
-       <widget class="QLabel" name="TextLabel8_3_2" >
-        <property name="font" >
-         <font/>
-        </property>
-        <property name="text" >
-         <string>Low</string>
-        </property>
-        <property name="wordWrap" >
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1" >
+      <item row="3" column="2" >
        <widget class="QLabel" name="TextLabel8_2_2_2" >
         <property name="font" >
          <font/>
@@ -177,18 +155,28 @@
         </property>
        </widget>
       </item>
+      <item row="3" column="0" >
+       <widget class="QLabel" name="TextLabel8_3_2" >
+        <property name="font" >
+         <font/>
+        </property>
+        <property name="text" >
+         <string>Low</string>
+        </property>
+        <property name="wordWrap" >
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
-   <item row="2" column="0" >
-    <widget class="Q3GroupBox" name="groupBox1" >
+   <item>
+    <widget class="QGroupBox" name="groupBox_2" >
      <property name="title" >
       <string>Tags</string>
      </property>
-     <property name="orientation" >
-      <enum>Qt::Vertical</enum>
-     </property>
-     <layout class="QGridLayout" >
+     <layout class="QGridLayout" name="gridLayout_2" >
       <item row="0" column="0" >
        <widget class="QLabel" name="TextLabel3_2_3" >
         <property name="enabled" >
@@ -249,12 +237,12 @@
      </layout>
     </widget>
    </item>
-   <item row="4" column="0" >
+   <item>
     <spacer>
      <property name="orientation" >
       <enum>Qt::Vertical</enum>
      </property>
-     <property name="sizeHint" >
+     <property name="sizeHint" stdset="0" >
       <size>
        <width>20</width>
        <height>51</height>
@@ -266,14 +254,6 @@
  </widget>
  <layoutdefault spacing="6" margin="11" />
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
- <customwidgets>
-  <customwidget>
-   <class>Q3GroupBox</class>
-   <extends>QGroupBox</extends>
-   <header>Qt3Support/Q3GroupBox</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
