--- a/mixxx/src/dlgprefsounddlg.ui
+++ b/mixxx/src/dlgprefsounddlg.ui
@@ -5,15 +5,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>520</width>
-    <height>490</height>
+    <width>527</width>
+    <height>512</height>
    </rect>
   </property>
   <property name="windowTitle" >
    <string>Form1</string>
   </property>
-  <layout class="QVBoxLayout" >
-   <item>
+  <layout class="QGridLayout" name="gridLayout_2" >
+   <item row="0" column="0" >
     <widget class="QGroupBox" name="audioGroupBox" >
      <property name="title" >
       <string>Audio Output</string>
@@ -196,7 +196,7 @@
      </layout>
     </widget>
    </item>
-   <item>
+   <item row="1" column="0" >
     <widget class="QGroupBox" name="stretchGroupBox" >
      <property name="title" >
       <string>Pitch behaviour</string>
@@ -244,54 +244,44 @@
      </layout>
     </widget>
    </item>
-   <item>
+   <item row="2" column="0" >
     <layout class="QHBoxLayout" >
      <item>
-      <widget class="Q3GroupBox" name="GroupBox1" >
-       <property name="enabled" >
-        <bool>true</bool>
-       </property>
-       <property name="font" >
-        <font/>
-       </property>
+      <widget class="QGroupBox" name="groupBox" >
        <property name="title" >
         <string>Latency</string>
        </property>
-       <layout class="QVBoxLayout" >
-        <item>
-         <layout class="QHBoxLayout" >
-          <item>
-           <spacer>
-            <property name="orientation" >
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0" >
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item>
-           <widget class="QLabel" name="TextLabelLatency" >
-            <property name="font" >
-             <font/>
-            </property>
-            <property name="text" >
-             <string>256 ms</string>
-            </property>
-            <property name="alignment" >
-             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-            </property>
-            <property name="wordWrap" >
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-         </layout>
+       <layout class="QGridLayout" name="gridLayout" >
+        <item row="0" column="0" colspan="3" >
+         <spacer>
+          <property name="orientation" >
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0" >
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
         </item>
-        <item>
+        <item row="0" column="3" colspan="2" >
+         <widget class="QLabel" name="TextLabelLatency" >
+          <property name="font" >
+           <font/>
+          </property>
+          <property name="text" >
+           <string>256 ms</string>
+          </property>
+          <property name="alignment" >
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+          <property name="wordWrap" >
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0" colspan="5" >
          <widget class="QSlider" name="SliderLatency" >
           <property name="minimum" >
            <number>6</number>
@@ -316,94 +306,86 @@
           </property>
          </widget>
         </item>
-        <item>
-         <layout class="QHBoxLayout" >
-          <item>
-           <widget class="QLabel" name="TextLabel8" >
-            <property name="font" >
-             <font/>
-            </property>
-            <property name="text" >
-             <string>Low</string>
-            </property>
-            <property name="wordWrap" >
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer>
-            <property name="orientation" >
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0" >
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item>
-           <widget class="QLabel" name="TextLabel8_2" >
-            <property name="font" >
-             <font/>
-            </property>
-            <property name="text" >
-             <string>High</string>
-            </property>
-            <property name="wordWrap" >
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-         </layout>
+        <item row="2" column="0" >
+         <widget class="QLabel" name="TextLabel8" >
+          <property name="font" >
+           <font/>
+          </property>
+          <property name="text" >
+           <string>Low</string>
+          </property>
+          <property name="wordWrap" >
+           <bool>false</bool>
+          </property>
+         </widget>
         </item>
-        <item>
-         <layout class="QHBoxLayout" >
-          <item>
-           <widget class="QLabel" name="TextLabel1_4_3_2" >
-            <property name="font" >
-             <font/>
-            </property>
-            <property name="text" >
-             <string>Fast CPU</string>
-            </property>
-            <property name="wordWrap" >
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer>
-            <property name="orientation" >
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0" >
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item>
-           <widget class="QLabel" name="TextLabelLatencyMaster_3_2" >
-            <property name="font" >
-             <font/>
-            </property>
-            <property name="text" >
-             <string>Slow CPU</string>
-            </property>
-            <property name="alignment" >
-             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-            </property>
-            <property name="wordWrap" >
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-         </layout>
+        <item row="2" column="1" colspan="3" >
+         <spacer>
+          <property name="orientation" >
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0" >
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="2" column="4" >
+         <widget class="QLabel" name="TextLabel8_2" >
+          <property name="font" >
+           <font/>
+          </property>
+          <property name="text" >
+           <string>High</string>
+          </property>
+          <property name="wordWrap" >
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0" colspan="2" >
+         <widget class="QLabel" name="TextLabel1_4_3_2" >
+          <property name="font" >
+           <font/>
+          </property>
+          <property name="text" >
+           <string>Fast CPU</string>
+          </property>
+          <property name="wordWrap" >
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="2" >
+         <spacer>
+          <property name="orientation" >
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0" >
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="3" column="3" colspan="2" >
+         <widget class="QLabel" name="TextLabelLatencyMaster_3_2" >
+          <property name="font" >
+           <font/>
+          </property>
+          <property name="text" >
+           <string>Slow CPU</string>
+          </property>
+          <property name="alignment" >
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+          <property name="wordWrap" >
+           <bool>false</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
@@ -423,7 +405,7 @@
      </item>
     </layout>
    </item>
-   <item>
+   <item row="3" column="0" >
     <spacer>
      <property name="orientation" >
       <enum>Qt::Vertical</enum>
@@ -440,14 +422,6 @@
  </widget>
  <layoutdefault spacing="6" margin="11" />
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
- <customwidgets>
-  <customwidget>
-   <class>Q3GroupBox</class>
-   <extends>QGroupBox</extends>
-   <header>Qt3Support/Q3GroupBox</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <tabstops>
   <tabstop>ComboBoxSoundcardMaster</tabstop>
   <tabstop>ComboBoxChannelMaster</tabstop>
@@ -457,7 +431,6 @@
   <tabstop>ComboBoxSoundApi</tabstop>
   <tabstop>radioButtonVinylEmu</tabstop>
   <tabstop>radioButtonPitchIndp</tabstop>
-  <tabstop>SliderLatency</tabstop>
  </tabstops>
  <resources/>
  <connections/>
