--- a/mixxx/src/dlgprefvinyldlg.ui
+++ b/mixxx/src/dlgprefvinyldlg.ui
@@ -5,20 +5,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>442</width>
-    <height>468</height>
+    <width>514</width>
+    <height>504</height>
    </rect>
   </property>
   <property name="windowTitle" >
    <string>Form1</string>
   </property>
-  <layout class="QGridLayout" >
+  <layout class="QGridLayout" name="gridLayout_3" >
    <item row="0" column="0" colspan="2" >
-    <widget class="Q3GroupBox" name="Input" >
+    <widget class="QGroupBox" name="groupBox_2" >
      <property name="title" >
       <string>Input</string>
      </property>
-     <layout class="QGridLayout" >
+     <layout class="QGridLayout" name="gridLayout" >
       <item row="0" column="0" >
        <widget class="QLabel" name="TextLabel1_2" >
         <property name="enabled" >
@@ -41,7 +41,7 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1" >
+      <item row="0" column="1" colspan="2" >
        <widget class="QComboBox" name="ComboBoxDeviceDeck1" >
         <property name="enabled" >
          <bool>true</bool>
@@ -51,7 +51,7 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="2" >
+      <item row="0" column="3" colspan="2" >
        <widget class="QComboBox" name="ComboBoxChannelDeck1" />
       </item>
       <item row="1" column="0" >
@@ -76,7 +76,7 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1" >
+      <item row="1" column="1" colspan="2" >
        <widget class="QComboBox" name="ComboBoxDeviceDeck2" >
         <property name="enabled" >
          <bool>true</bool>
@@ -86,10 +86,10 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="2" >
+      <item row="1" column="3" colspan="2" >
        <widget class="QComboBox" name="ComboBoxChannelDeck2" />
       </item>
-      <item row="2" column="0" colspan="3" >
+      <item row="2" column="0" colspan="5" >
        <widget class="QLabel" name="label_2" >
         <property name="text" >
          <string>&lt;a href="http://www.mixxx.org/wiki/doku.php/vinyl_control#troubleshooting">Troubleshooting&lt;/a></string>
@@ -99,17 +99,17 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="0" colspan="2" >
+      <item row="3" column="0" >
        <widget class="QLabel" name="textLabel1_3" >
         <property name="text" >
-         <string>Turntable Input Preamp</string>
+         <string>Turntable Preamp</string>
         </property>
         <property name="wordWrap" >
          <bool>false</bool>
         </property>
        </widget>
       </item>
-      <item row="4" column="0" colspan="3" >
+      <item row="3" column="1" colspan="4" >
        <widget class="QSlider" name="VinylGain" >
         <property name="minimum" >
          <number>1</number>
@@ -122,7 +122,20 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="0" colspan="2" >
+      <item row="4" column="0" >
+       <spacer name="horizontalSpacer_3" >
+        <property name="orientation" >
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0" >
+         <size>
+          <width>115</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="4" column="1" >
        <widget class="QLabel" name="textLabel2" >
         <property name="text" >
          <string>1 (Off)</string>
@@ -132,7 +145,20 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="2" >
+      <item row="4" column="2" colspan="2" >
+       <spacer name="horizontalSpacer" >
+        <property name="orientation" >
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0" >
+         <size>
+          <width>238</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="4" column="4" >
        <widget class="QLabel" name="textLabel3" >
         <property name="sizePolicy" >
          <sizepolicy vsizetype="Preferred" hsizetype="Fixed" >
@@ -152,11 +178,11 @@
     </widget>
    </item>
    <item row="1" column="0" colspan="2" >
-    <widget class="Q3GroupBox" name="VinylOptions" >
+    <widget class="QGroupBox" name="groupBox_3" >
      <property name="title" >
       <string>Vinyl Configuration</string>
      </property>
-     <layout class="QGridLayout" >
+     <layout class="QGridLayout" name="gridLayout_2" >
       <item row="0" column="0" >
        <widget class="QLabel" name="TextLabel2" >
         <property name="enabled" >
@@ -178,22 +204,6 @@
          <bool>false</bool>
         </property>
        </widget>
-      </item>
-      <item row="0" column="1" >
-       <spacer>
-        <property name="orientation" >
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeType" >
-         <enum>QSizePolicy::Minimum</enum>
-        </property>
-        <property name="sizeHint" >
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
       </item>
       <item row="0" column="2" colspan="2" >
        <widget class="QComboBox" name="ComboBoxVinylType" >
@@ -233,19 +243,6 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1" >
-       <spacer>
-        <property name="orientation" >
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" >
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
       <item row="1" column="2" >
        <widget class="QLineEdit" name="LeadinTime" >
         <property name="sizePolicy" >
@@ -271,6 +268,19 @@
          <bool>false</bool>
         </property>
        </widget>
+      </item>
+      <item row="1" column="1" >
+       <spacer name="horizontalSpacer_2" >
+        <property name="orientation" >
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0" >
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
       </item>
      </layout>
     </widget>
@@ -309,11 +319,11 @@
        </widget>
       </item>
       <item>
-        <widget class="QCheckBox" name="NeedleSkipEnable" >
-        <property name="text">
-                <string>Enable Needle Skip Prevention</string>
+       <widget class="QCheckBox" name="NeedleSkipEnable" >
+        <property name="text" >
+         <string>Enable Needle Skip Prevention</string>
         </property>
-        </widget>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -323,7 +333,21 @@
      <property name="title" >
       <string>Signal Quality</string>
      </property>
-     <layout class="QGridLayout" />
+     <layout class="QGridLayout" >
+      <item row="0" column="0" >
+       <spacer name="verticalSpacer_2" >
+        <property name="orientation" >
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0" >
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
     </widget>
    </item>
    <item row="3" column="1" >
@@ -342,18 +366,23 @@
      </property>
     </widget>
    </item>
+   <item row="4" column="1" >
+    <spacer name="verticalSpacer" >
+     <property name="orientation" >
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0" >
+      <size>
+       <width>51</width>
+       <height>59</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11" />
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
- <customwidgets>
-  <customwidget>
-   <class>Q3GroupBox</class>
-   <extends>QGroupBox</extends>
-   <header>Qt3Support/Q3GroupBox</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
